--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Author URL: http://w3layouts.com
             <div class="col-lg-6 col-md-6">
                 <div class="service-single-grid">
                     <div class="service-image">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15520.450684660655!2d75.8447957!3d12.4943522!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc7acc309502cf379!2sNavagreen%20avacado%20farms!5e1!3m2!1sen!2sin!4v1653707404975!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15520.450684660655!2d75.8447957!3d12.4943522!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc7acc309502cf379!2sNavagreen%20avacado%20farms!5e1!3m2!1sen!2sin!4v1653707404975!5m2!1sen!2sin"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                    
                 </div>
