--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Author URL: http://w3layouts.com
             <div class="col-lg-6 col-md-6">
                 <div class="service-single-grid">
                     <div class="service-image">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BAWHF9vI3Wg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe  height="315" src="https://www.youtube.com/embed/BAWHF9vI3Wg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     
                 </div>
