--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@ Author URL: http://w3layouts.com
     <!-- service 3 grids -->
    <!-- service 3 grids -->
    <section class="w3l-service-3 py-5">
-    <div class="container py-md-5 py-4">
+    <div class="row">
        
         <div class="row">
-            <div class="col-lg-6 col-md-6">
+            <div class="col-md-6">
                 <div class="service-single-grid">
                     <div class="service-image">
                         <iframe  height="315" src="https://www.youtube.com/embed/BAWHF9vI3Wg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -264,7 +264,7 @@ Author URL: http://w3layouts.com
                     
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6">
+            <div class="col-md-6">
                 <div class="service-single-grid">
                     <div class="service-image">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15520.450684660655!2d75.8447957!3d12.4943522!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc7acc309502cf379!2sNavagreen%20avacado%20farms!5e1!3m2!1sen!2sin!4v1653707404975!5m2!1sen!2sin"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
